Window resize issues + arrow overlap over groups on mobile fixed

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -772,7 +772,7 @@ ul.products li {
         color: #ffffff;
         @media(max-device-width: 767px){
           float: right;
-          left: -20px;
+          left: 1%;
         }
       }
 
@@ -939,7 +939,7 @@ ul.products li {
 }
 .padd55px{
   padding-left: 55px;
-  @media(max-width: 1023px){
+  @media(max-width: 1155px){
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -1094,8 +1094,8 @@ hr{
 .margin4LeftMultimedia
 {
   margin-left: -3%;
-  @media (max-width: 768px) {
-    margin-left: -4%;
+  @media (max-width: 1155px) {
+    margin-left: 0%;
   }
 }
 .justify{
@@ -1275,7 +1275,7 @@ hr{
   right: auto;
   margin-top: 5px;
   left: 0 !important;
-  @media(max-device-width: 768px){
+  @media(max-width: 1155px){
     left: auto !important;
   }
 }
@@ -1395,12 +1395,12 @@ hr{
   }
 }
 .disableSpecial{
-  @media(max-width: 1049px){
+  @media(max-width: 1155px){
     display: none;
   }
 }
 .disableDesktop{
-  @media(min-width: 1050px){
+  @media(min-width: 1156px){
     display: none;
   }
 }
